--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
     defaultConfig {
-        applicationId "info.androidhive.navigationdrawer"
+        applicationId "com.c2c.learnopedia"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
